deploy/cloud/openshift/api-alias-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: opsportal
  labels:
    app: ops-portalapi
spec:
  selector:
    app: ops-portalapi
  ports:
    - name: http
      port: 8010
      targetPort: 8010
      protocol: TCP
