deploy/cloud/openshift/ops-portalapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ops-portalapi
  namespace: opsportal
  labels:
    app: ops-portalapi
    app.kubernetes.io/component: api
    app.kubernetes.io/name: ops-portalapi
    app.kubernetes.io/part-of: ops-portal-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ops-portalapi
  template:
    metadata:
      labels:
        app: ops-portalapi
        app.kubernetes.io/component: api
        app.kubernetes.io/name: ops-portalapi
        deployment: ops-portalapi
    spec:
      containers:
        - name: ops-portalapi
          image: containers.example.com/ops-team/ops-portal:api-2026-03-27-r2
          imagePullPolicy: Always
          ports:
            - containerPort: 8010
              protocol: TCP
          resources:
            requests:
              cpu: 250m
              memory: 1Gi
              ephemeral-storage: 1Gi
            limits:
              cpu: 1000m
              memory: 2Gi
              ephemeral-storage: 4Gi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  name: ops-portalapi
  namespace: opsportal
  labels:
    app: ops-portalapi
spec:
  selector:
    app: ops-portalapi
  ports:
    - name: http
      port: 8010
      targetPort: 8010
      protocol: TCP
