deploy/cloud/openshift/ops-portal-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ops-portal
  namespace: opsportal
  labels:
    app: ops-portal
    app.kubernetes.io/component: web
    app.kubernetes.io/name: ops-portal
    app.kubernetes.io/part-of: ops-portal-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ops-portal
  template:
    metadata:
      labels:
        app: ops-portal
        app.kubernetes.io/component: web
        app.kubernetes.io/name: ops-portal
        deployment: ops-portal
    spec:
      containers:
        - name: ops-portal
          image: containers.example.com/ops-team/ops-portal:web-2026-03-27-r3
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
              protocol: TCP
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
---
apiVersion: v1
kind: Service
metadata:
  name: ops-portal
  namespace: opsportal
  labels:
    app: ops-portal
spec:
  selector:
    app: ops-portal
  ports:
    - name: 3000-tcp
      port: 3000
      targetPort: 3000
      protocol: TCP
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: ops-portal
  namespace: opsportal
  labels:
    app: ops-portal
  annotations:
    haproxy.router.openshift.io/timeout: 10m
spec:
  host: ops-portal-opsportal-ops-team.cloudapps.example.com
  to:
    kind: Service
    name: ops-portal
    weight: 100
  port:
    targetPort: 3000-tcp
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
